[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand_core"] }
ppv-lite86 = "0.2.19"
once_cell = "1.21.3"
regex = "1.11.1"
pwshare-macros = { path="pwshare-macros" }

[profile.release]
debug = 1
