[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21.3"
regex = "1.11.1"
pwshare-macros = { path = "pwshare-macros" }
num-bigint = { version = "0.4.6", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
num-traits = "0.2.19"
num-integer = "0.1.46"

[profile.release]
debug = 1
